# agentic-agile-in-tmux

./: Cargo.toml
src/: config.rs  db.rs  lib.rs  main.rs  task.rs  tmux.rs  worktree.rs
src/ui/: board.rs  dialog.rs  mod.rs  status_bar.rs  task_card.rs
