[package]
name = "agentic-agile-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
rat-widget = "3.2"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"

[profile.release]
strip = true
